:memo: update documentation
